--- a/myapp/views/index.ejs
+++ b/myapp/views/index.ejs
@@ -22,12 +22,12 @@
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="map">Map</a>
+              <a class="nav-link" href="/map">Map</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
               <div class="dropdown-menu" aria-labelledby="dropdownId">
-                <a class="dropdown-item" href="#">Action 1</a>
+                <a class="dropdown-item" href="/graph">graph 1</a>
                 <a class="dropdown-item" href="#">Action 2</a>
               </div>
             </li>
@@ -48,11 +48,11 @@
             </tr>
           </thead>
           <tbody>
-            <% countrys.forEach(function(data){ %>
+            <% resultData.forEach(function(data){ %>
               <tr>
                   <td><%= data.state %></td>
                   <td><%= data.country %></td>
-                  <td><%= data.confirmed %></td>
+                  <td><%= data.confirm %></td>
               </tr>
           <% })  %>
           </tbody>
